fixed navbar overlapping with page contents

--- a/style.css
+++ b/style.css
@@ -179,6 +179,10 @@ nav ul li ul li a{
         padding-left: 30px;
    }
 
+   .main-img{
+       z-index: -1;
+   }
+	
    .sub-nav{
         position: static; /*To avoid that dropdown overflow on other list items*/
    }
@@ -896,6 +900,11 @@ footer{
     .prog-nav{
         width: 100%;
     }
+	
+    .banner-programmes{
+        z-index: -1;
+    }
+	
     .prog-nav ul{
         display: flex;
         flex-direction: row;
